--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
             </div>
             <p id="no-results-message" style="display: none; color: red; font-size: 1.2rem;">No scripts found</p>
         </div>
+        <div class="container">
+            <h2>Featured Scripts</h2>
+            <div class="item" data-title="Jerk Off Script">
+                <div class="item-image">
+                    <img src="https://img.youtube.com/vi/bYxbxjzGMhM/maxresdefault.jpg" alt="YouTube Video Thumbnail">
+                </div>
+                <h3>Ultimate Stand Script in The Strongest Battleground</h3>
+                <p>This script let's you troll players and this is part of Menace Hub. Made by us.</p>
+                <button class="get-script" onclick="window.location.href='https://rkns.link/tepy0'">Get Script from YouTube</button>
+                <button class="get-script" onclick="window.location.href='https://rkns.link/q6nh5'">Get Script from Tiktok</button>
+            </div>
+            <p id="no-results-message" style="display: none; color: red; font-size: 1.2rem;">No scripts found</p>
+         </div>
     </main>
 
     <footer>
