--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="item-image">
                     <img src="https://img.youtube.com/vi/bYxbxjzGMhM/maxresdefault.jpg" alt="YouTube Video Thumbnail">
                 </div>
-                <h3>Ultimate Stand Script in The Strongest Battleground</h3>
+                <h3>Jerk Off Script Roblox</h3>
                 <p>This script let's you troll players and this is part of Menace Hub. Made by us.</p>
                 <button class="get-script" onclick="window.location.href='https://rkns.link/tepy0'">Get Script from YouTube</button>
                 <button class="get-script" onclick="window.location.href='https://rkns.link/q6nh5'">Get Script from Tiktok</button>
