--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menace</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://publisher.linkvertise.com/cdn/linkvertise.js"></script>
+    <script>linkvertise(1202965, {whitelist: [], blacklist: [""]});</script>
 </head>
 <body>
     <header>
